Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34119

Assertion `page_dir_get_n_heap(new_page) == 2U' failed in dberr_t PageBulk::init()

    XMLWordPrintable

Details

    Description

      Replay using CLI

      CREATE OR REPLACE TABLE t1 (c1 INT) ENGINE=INNODB PARTITION BY RANGE (c1) (PARTITION p0 VALUES LESS THAN (100));
      SET unique_checks=0, foreign_key_checks=0;
      CREATE OR REPLACE TABLE t2 (c1 INT) ENGINE=INNODB PARTITION BY RANGE (c1) (PARTITION p0 VALUES LESS THAN (100));
      CREATE TABLE t3 (c1 CHAR(1));
      XA BEGIN 'a';
      INSERT INTO t1 values (1);
      INSERT INTO t3 VALUES (1,a);
      INSERT INTO t2 VALUES (1);
      INSERT INTO t1 SELECT seq FROM seq_1_to_1; 
      

      Leads to

      10.11.8 64314d3094ef5eb52223c613632292be96bd7732 (Debug)

      mariadbd: /test/10.11_dbg/storage/innobase/btr/btr0bulk.cc:106: dberr_t PageBulk::init(): Assertion `page_dir_get_n_heap(new_page) == 2U' failed.
      

      10.11.8 64314d3094ef5eb52223c613632292be96bd7732 (Debug)

      Core was generated by `/test/MD070524-mariadb-10.11.8-linux-x86_64-dbg/bin/mariadbd --no-defaults --ma'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      [Current thread is 1 (Thread 0x1526e8164700 (LWP 907706))]
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x00001526fda9e859 in __GI_abort () at abort.c:79
      #2  0x00001526fda9e729 in __assert_fail_base (fmt=0x1526fdc34588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55bd61747e58 "page_dir_get_n_heap(new_page) == 2U", file=0x55bd617481f0 "/test/10.11_dbg/storage/innobase/btr/btr0bulk.cc", line=106, function=<optimized out>) at assert.c:92
      #3  0x00001526fdaaffd6 in __GI___assert_fail (assertion=assertion@entry=0x55bd61747e58 "page_dir_get_n_heap(new_page) == 2U", file=file@entry=0x55bd617481f0 "/test/10.11_dbg/storage/innobase/btr/btr0bulk.cc", line=line@entry=106, function=function@entry=0x55bd61747c39 "dberr_t PageBulk::init()") at assert.c:101
      #4  0x000055bd61094abe in PageBulk::init (this=this@entry=0x1526e8162500) at /test/10.11_dbg/storage/innobase/include/page0page.inl:294
      #5  0x000055bd610978bc in BtrBulk::finish (this=this@entry=0x1526e81629f0, err=<optimized out>, err@entry=DB_SUCCESS) at /test/10.11_dbg/storage/innobase/btr/btr0bulk.cc:1201
      #6  0x000055bd60f9e716 in row_merge_bulk_t::write_to_index (this=this@entry=0x1526ac07b3c0, index_no=index_no@entry=0, trx=trx@entry=0x1526fc851b80) at /test/10.11_dbg/storage/innobase/row/row0merge.cc:5322
      #7  0x000055bd60f9e822 in row_merge_bulk_t::write_to_table (this=0x1526ac07b3c0, table=<optimized out>, trx=trx@entry=0x1526fc851b80) at /test/10.11_dbg/storage/innobase/row/row0merge.cc:5335
      #8  0x000055bd60f9e868 in trx_mod_table_time_t::write_bulk (this=this@entry=0x1526ac08c320, table=<optimized out>, trx=trx@entry=0x1526fc851b80) at /test/10.11_dbg/storage/innobase/row/row0merge.cc:5348
      #9  0x000055bd60f9e9d3 in trx_t::bulk_insert_apply_low (this=this@entry=0x1526fc851b80) at /test/10.11_dbg/storage/innobase/row/row0merge.cc:5392
      #10 0x000055bd60e240b6 in trx_t::bulk_insert_apply (this=0x1526fc851b80) at /test/10.11_dbg/storage/innobase/handler/ha_innodb.cc:2873
      #11 ha_innobase::extra (this=0x1526ac0367f0, operation=<optimized out>) at /test/10.11_dbg/storage/innobase/handler/ha_innodb.cc:15723
      #12 0x000055bd60d3dee5 in extra_cb (h=<optimized out>, operation=<optimized out>) at /test/10.11_dbg/sql/ha_partition.cc:8980
      #13 0x000055bd60d4ff63 in ha_partition::loop_partitions_over_map (this=this@entry=0x1526ac035f30, part_map=0x1526ac026fc0, callback=callback@entry=0x55bd60d3ded2 <extra_cb(handler*, void*)>, param=param@entry=0x1526e8162bcc) at /test/10.11_dbg/include/my_bitmap.h:114
      #14 0x000055bd60d4ffae in ha_partition::loop_partitions (this=this@entry=0x1526ac035f30, callback=callback@entry=0x55bd60d3ded2 <extra_cb(handler*, void*)>, param=param@entry=0x1526e8162bcc) at /test/10.11_dbg/sql/ha_partition.cc:9638
      #15 0x000055bd60d504f7 in ha_partition::extra (this=0x1526ac035f30, operation=<optimized out>) at /test/10.11_dbg/sql/ha_partition.cc:9342
      #16 0x000055bd6074539d in select_insert::abort_result_set (this=0x1526ac016490) at /test/10.11_dbg/sql/sql_insert.cc:4453
      #17 0x000055bd60821074 in handle_select (thd=thd@entry=0x1526ac000d48, lex=lex@entry=0x1526ac005110, result=result@entry=0x1526ac016490, setup_tables_done_option=setup_tables_done_option@entry=35184372088832) at /test/10.11_dbg/sql/sql_select.cc:604
      #18 0x000055bd60795886 in mysql_execute_command (thd=thd@entry=0x1526ac000d48, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/10.11_dbg/sql/sql_parse.cc:4782
      #19 0x000055bd60780bd4 in mysql_parse (thd=thd@entry=0x1526ac000d48, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1526e81632b0) at /test/10.11_dbg/sql/sql_parse.cc:8126
      #20 0x000055bd6078e7bc in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x1526ac000d48, packet=packet@entry=0x1526ac00b139 "INSERT INTO t1 SELECT seq FROM seq_1_to_100", packet_length=packet_length@entry=43, blocking=blocking@entry=true) at /test/10.11_dbg/sql/sql_class.h:1397
      #21 0x000055bd60791123 in do_command (thd=0x1526ac000d48, blocking=blocking@entry=true) at /test/10.11_dbg/sql/sql_parse.cc:1407
      #22 0x000055bd6090265b in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55bd642fe438, put_in_cache=put_in_cache@entry=true) at /test/10.11_dbg/sql/sql_connect.cc:1415
      #23 0x000055bd60902c10 in handle_one_connection (arg=arg@entry=0x55bd642fe438) at /test/10.11_dbg/sql/sql_connect.cc:1317
      #24 0x000055bd60d59136 in pfs_spawn_thread (arg=0x55bd642589b8) at /test/10.11_dbg/storage/perfschema/pfs.cc:2201
      #25 0x00001526fdfaf609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #26 0x00001526fdb9b133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.11.8 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.4.34 (dbg), 10.4.34 (opt), 10.5.25 (dbg), 10.5.25 (opt), 10.6.18 (dbg), 10.6.18 (opt), 10.11.8 (opt), 11.0.6 (dbg), 11.0.6 (opt), 11.1.5 (dbg), 11.1.5 (opt), 11.2.4 (dbg), 11.2.4 (opt), 11.3.3 (dbg), 11.3.3 (opt), 11.4.2 (dbg), 11.4.2 (opt), 11.5.0 (dbg), 11.5.0 (opt)

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.25d
                  3.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.