MDEV-34119  Assertion `page_dir_get_n_heap(new_page) == 2U' failed in dberr_t PageBulk::init()

Problem:
=======
- insert..select statement on partition table fails to use
bulk insert for the transaction.

Solution:
========
- Enable the bulk insert operation for insert..select
statement for partition table.